--- a/laravel/public/js/templates/add.html
+++ b/laravel/public/js/templates/add.html
@@ -15,7 +15,7 @@
 		<div class="form-group">
 			<textarea ng-model="new.content" class="form-control" cols="30" rows="10"></textarea>
 		</div>
-		<button ng-click="submit()" class="btn btn-success">Save</button>
+		<button ng-click="createPost()" class="btn btn-success">Save</button>
 		<p class="bg-info">{{flash}}</p>
 	</form>
 </div>
