--- a/laravel/public/js/templates/edit.html
+++ b/laravel/public/js/templates/edit.html
@@ -18,7 +18,7 @@
 		<p class="bg-info">
 			{{flash}}
 		</p>
-		<button ng-click="submit()" class="btn btn-success">Save</button>
+		<button ng-click="updatePost()" class="btn btn-success">Save</button>
 	</form>
 </div>
 
