--- a/laravel/public/js/templates/login.html
+++ b/laravel/public/js/templates/login.html
@@ -2,12 +2,19 @@
 	<div id="login" class="col-md-4 col-md-offset-4">
 		<div id="login-form">
 			<h4>Login</h4>
+            {{loginData.username}}
 			<form><!--username-->
-				<div class="form-group"><input id="username" type="text" /></div>
+				<div class="form-group">
+                    <input id="username" type="text" ng-model="loginData.username" />
+                </div>
 			      <!--password-->
-				<div class="form-group"><input id="password" type="password" /></div>
+				<div class="form-group">
+                    <input id="password" type="password" ng-model="loginData.password" />
+                </div>
 			      <!--submit-->
-				<div class="form-group"><button class="btn btn-primary" type="submit">Login</button></div>
+				<div class="form-group">
+                    <button class="btn btn-primary" type="submit" ng-click="loginSubmit()">Login</button>
+                </div>
 			</form></div>
 	</div>
 </pre>
