--- a/laravel/public/templates/dashboard.html
+++ b/laravel/public/templates/dashboard.html
@@ -9,6 +9,7 @@
 	<a class="btn btn-primary" href="#/add">Create New Post</a>
 </div><!--3cols-->
 <div class="col-md-9">
+    <div flash-messages></div>
 	<table class="table table-striped">
 		<tr>
 			<th></th>
