--- a/laravel/public/templates/edit.html
+++ b/laravel/public/templates/edit.html
@@ -7,6 +7,7 @@
 <h1>Edit a Post</h1>
 <div class="col-md-12 well"><a href="#/dashboard"><< Back to Dashboard</a></div>
 <div class="col-md-12">
+    <div flash-messages></div>
 	<form>
 		<div class="form-group">
 			<label for="title">Post Title</label>
@@ -15,9 +16,6 @@
 		<div class="form-group">
 			<textarea ng-model="post.content" class="form-control" cols="30" rows="10"></textarea>
 		</div>
-		<p class="bg-info">
-			{{flash}}
-		</p>
 		<button ng-click="updatePost()" class="btn btn-success">Save</button>
 	</form>
 </div>
