adding oauth logins

--- a/laravel/public/templates/login.html
+++ b/laravel/public/templates/login.html
@@ -13,6 +13,7 @@
               <!--submit-->
             <div class="form-group">
                 <button class="btn btn-primary" type="submit" ng-click="loginSubmit()">Login</button>
+                <button ng-click="authenticate('facebook')">Sign in with Facebook</button>
             </div>
         </form></div>
 </div>
